Changed line-height for tooltip content to be initial. This is fix for wrong size tooltip.

--- a/src/assets/styles/elements/_tooltip.scss
+++ b/src/assets/styles/elements/_tooltip.scss
@@ -40,6 +40,7 @@ $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
     padding: 3px 8px;
     color: $tooltip-color;
     text-align: center;
+    line-height: initial;
 
     background-color: $tooltip-bg;
     border-radius: $border-radius-base;
